# configurable_automl_engine

./: .gitignore  LICENSE.md  README.md  config.schema.json  example.py  pyproject.toml  requirements.txt  schema_generator.py
.github/workflows/: CI.yaml  run_test.yaml
src/configurable_automl_engine/: __init__.py  hyperopt_module.py  models.py  oversampling.py  trainer.py  tuner.py  validation.py
src/configurable_automl_engine/common/: definitions.py  dependency_utils.py  hyperopt_defaults.py  serialization_utils.py  validation_utils.py
src/configurable_automl_engine/training_engine/: __init__.py  component.py  config_parser.py  logger.py  metrics.py  thread_pool.py
tests/: conftest.py  data_factory.py  run_tests.py  test_algorithms.py  test_algorithms_extended.py  test_component.py  test_config_validation.py  test_dependency_utils.py  test_e2e_pipeline.py  test_hyperopt_module.py  test_logger.py  test_metrics.py  test_models.py  test_objective.py  test_oversampling.py  test_parallel.py  test_pipeline_with_fractional_os.py  test_serialization.py  test_train_model.py  test_tuner.py  test_validation.py  test_validation_strategy.py
