[build-system]
requires = ["setuptools>=64","setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configurable-automl-engine"              # имя на PyPI (может отличаться от модуля)
dynamic = ["version"]
description = "A configuration-driven AutoML orchestrator for automated model selection and two-stage hyperparameter optimization."
readme = "README.md"
license = {text = "BSD 3-Clause"}
authors = [
  { name = "Leonid Lapshin", email = "leonid.lapshin.a@gmail.com" }
  ]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "imbalanced-learn>=0.14.1",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "optuna>=4.7.0",
    "pydantic>=2.12.5",
    "pyarrow>23.0.0",
]

[project.optional-dependencies]

xgboost = ["xgboost>=3.1.3"]

test = ["pytest>=9.0.2"]

all = ["configurable-automl-engine[xgboost]"]

dev = ["automl-engine[all,test]"]

[project.urls]
Homepage = "https://github.com/LapshinLeonid/configurable_automl_engine"
Issues = "https://github.com/LapshinLeonid/configurable_automl_engine/issues"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/configurable_automl_engine/_version.py"